app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud
  namespace: local
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
      annotations:
        checksum/config: "e4a023fd8427e91e75bc91e928b8552bea9bbd16ae93850fcdee3b483be982d6" #Force to update pod if something is changed in the configMap file        
    spec:
      containers:
        - name: crud
          image: devops1600/crud-node:v0.10
          command: ["./start.sh"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 50
            periodSeconds: 5
