app/manifests/deploymentdb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: devops1600/crud-mysql:v0.1
          ports:
          - containerPort: 3306
          resources:
            limits:
              memory: "256Mi"  
              cpu: "500m"      
          livenessProbe:
            tcpSocket:
              port: 3306
